[metadata]
name = iliasScraper
version = file: iliasScraper/VERSION
description = scraper for ilias platform of of the uni constance
long_description = file: README.md
licence: MIT
author = Tilman Kerl
author_email = tilmankerl@protonmail.com

[options]
python_requires = >= 3.6
packages = iliasScraper
include_package_data = true
install_requires =
		bs4
		requests
		fleep
		tqdm
		colorama
		keyring
		click
